# serializer version: 1
# name: TestUpdateSurveyIteration.test_can_update_survey_iteration
  '''
  SELECT COUNT(*) AS "__count"
  FROM "posthog_survey"
  WHERE (NOT "posthog_survey"."archived"
         AND "posthog_survey"."end_date" IS NULL
         AND "posthog_survey"."start_date" IS NOT NULL
         AND "posthog_survey"."team_id" = 2
         AND NOT ("posthog_survey"."type" = 'api'))
  '''
# ---
# name: TestUpdateSurveyIteration.test_can_update_survey_iteration.1
  '''
  SELECT "posthog_survey"."id",
         "posthog_survey"."iteration_count",
         "posthog_survey"."iteration_start_dates"
  FROM "posthog_survey"
  WHERE ("posthog_survey"."end_date" IS NULL
         AND "posthog_survey"."iteration_count" IS NOT NULL
         AND "posthog_survey"."start_date" IS NOT NULL)
  '''
# ---
# name: TestUpdateSurveyIteration.test_can_update_survey_iteration.10
  '''
  SELECT "posthog_survey"."id",
         "posthog_survey"."team_id"
  FROM "posthog_survey"
  WHERE "posthog_survey"."id" = '018fca4d99ff0000c9a23f6b03c41906'::uuid
  LIMIT 21
  '''
# ---
# name: TestUpdateSurveyIteration.test_can_update_survey_iteration.11
  '''
  SELECT COUNT(*) AS "__count"
  FROM "posthog_survey"
  WHERE (NOT "posthog_survey"."archived"
         AND "posthog_survey"."end_date" IS NULL
         AND "posthog_survey"."start_date" IS NOT NULL
         AND "posthog_survey"."team_id" = 2
         AND NOT ("posthog_survey"."type" = 'api'))
  '''
# ---
# name: TestUpdateSurveyIteration.test_can_update_survey_iteration.12
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."ingested_event",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestUpdateSurveyIteration.test_can_update_survey_iteration.13
  '''
  SELECT "posthog_survey"."id",
         "posthog_survey"."team_id",
         "posthog_survey"."name",
         "posthog_survey"."description",
         "posthog_survey"."linked_flag_id",
         "posthog_survey"."targeting_flag_id",
         "posthog_survey"."internal_targeting_flag_id",
         "posthog_survey"."type",
         "posthog_survey"."conditions",
         "posthog_survey"."questions",
         "posthog_survey"."appearance",
         "posthog_survey"."created_at",
         "posthog_survey"."created_by_id",
         "posthog_survey"."start_date",
         "posthog_survey"."end_date",
         "posthog_survey"."updated_at",
         "posthog_survey"."archived",
         "posthog_survey"."responses_limit",
         "posthog_survey"."iteration_count",
         "posthog_survey"."iteration_frequency_days",
         "posthog_survey"."iteration_start_dates",
         "posthog_survey"."current_iteration",
         "posthog_survey"."current_iteration_start_date"
  FROM "posthog_survey"
  WHERE "posthog_survey"."id" = '018fca4d99ff0000c9a23f6b03c41906'::uuid
  LIMIT 21
  '''
# ---
# name: TestUpdateSurveyIteration.test_can_update_survey_iteration.2
  '''
  SELECT "posthog_survey"."id",
         "posthog_survey"."iteration_count",
         "posthog_survey"."iteration_start_dates"
  FROM "posthog_survey"
  WHERE "posthog_survey"."id" = '018fca4d99ff0000c9a23f6b03c41906'::uuid
  LIMIT 21
  '''
# ---
# name: TestUpdateSurveyIteration.test_can_update_survey_iteration.3
  '''
  SELECT "posthog_survey"."id",
         "posthog_survey"."end_date"
  FROM "posthog_survey"
  WHERE "posthog_survey"."id" = '018fca4d99ff0000c9a23f6b03c41906'::uuid
  LIMIT 21
  '''
# ---
# name: TestUpdateSurveyIteration.test_can_update_survey_iteration.4
  '''
  SELECT "posthog_survey"."id",
         "posthog_survey"."iteration_frequency_days"
  FROM "posthog_survey"
  WHERE "posthog_survey"."id" = '018fca4d99ff0000c9a23f6b03c41906'::uuid
  LIMIT 21
  '''
# ---
# name: TestUpdateSurveyIteration.test_can_update_survey_iteration.5
  '''
  SELECT "posthog_survey"."id",
         "posthog_survey"."current_iteration"
  FROM "posthog_survey"
  WHERE "posthog_survey"."id" = '018fca4d99ff0000c9a23f6b03c41906'::uuid
  LIMIT 21
  '''
# ---
# name: TestUpdateSurveyIteration.test_can_update_survey_iteration.6
  '''
  SELECT "posthog_survey"."id",
         "posthog_survey"."internal_targeting_flag_id"
  FROM "posthog_survey"
  WHERE "posthog_survey"."id" = '018fca4d99ff0000c9a23f6b03c41906'::uuid
  LIMIT 21
  '''
# ---
# name: TestUpdateSurveyIteration.test_can_update_survey_iteration.7
  '''
  SELECT "posthog_featureflag"."id",
         "posthog_featureflag"."key",
         "posthog_featureflag"."name",
         "posthog_featureflag"."filters",
         "posthog_featureflag"."rollout_percentage",
         "posthog_featureflag"."team_id",
         "posthog_featureflag"."created_by_id",
         "posthog_featureflag"."created_at",
         "posthog_featureflag"."deleted",
         "posthog_featureflag"."active",
         "posthog_featureflag"."rollback_conditions",
         "posthog_featureflag"."performed_rollback",
         "posthog_featureflag"."ensure_experience_continuity",
         "posthog_featureflag"."usage_dashboard_id",
         "posthog_featureflag"."has_enriched_analytics"
  FROM "posthog_featureflag"
  WHERE "posthog_featureflag"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestUpdateSurveyIteration.test_can_update_survey_iteration.8
  '''
  SELECT "posthog_featureflag"."id",
         "posthog_featureflag"."key",
         "posthog_featureflag"."name",
         "posthog_featureflag"."filters",
         "posthog_featureflag"."rollout_percentage",
         "posthog_featureflag"."team_id",
         "posthog_featureflag"."created_by_id",
         "posthog_featureflag"."created_at",
         "posthog_featureflag"."deleted",
         "posthog_featureflag"."active",
         "posthog_featureflag"."rollback_conditions",
         "posthog_featureflag"."performed_rollback",
         "posthog_featureflag"."ensure_experience_continuity",
         "posthog_featureflag"."usage_dashboard_id",
         "posthog_featureflag"."has_enriched_analytics"
  FROM "posthog_featureflag"
  WHERE ("posthog_featureflag"."active"
         AND NOT "posthog_featureflag"."deleted"
         AND "posthog_featureflag"."team_id" = 2)
  '''
# ---
# name: TestUpdateSurveyIteration.test_can_update_survey_iteration.9
  '''
  SELECT "posthog_survey"."id",
         "posthog_survey"."start_date"
  FROM "posthog_survey"
  WHERE "posthog_survey"."id" = '018fca4d99ff0000c9a23f6b03c41906'::uuid
  LIMIT 21
  '''
# ---
